[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Sword.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Slash.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/DamageArea.gd" type="Script" id=3]
[ext_resource path="res://Art/Character Sprites/Test_Sword.png" type="Texture" id=4]
[ext_resource path="res://Art/Character Sprites/hand.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3 )

[node name="Sword" type="Node2D"]
script = ExtResource( 1 )

[node name="HandPivot" type="Position2D" parent="."]

[node name="Hand" type="Sprite" parent="HandPivot"]
position = Vector2( 7.92675, 2.16911 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="HandPivot/Hand"]
position = Vector2( 7.07325, -0.169113 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="Slash" parent="HandPivot/Hand/Sprite" instance=ExtResource( 2 )]
visible = false
position = Vector2( -16.9999, 12.0001 )
rotation = -2.00713
scale = Vector2( 1, -1 )

[node name="DamageArea" type="Area2D" parent="HandPivot/Hand/Sprite"]
position = Vector2( -1.99995, 15 )
rotation = -1.5708
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandPivot/Hand/Sprite/DamageArea"]
position = Vector2( 15, 2 )
shape = SubResource( 1 )
disabled = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HandPivot/Hand/Sprite/DamageArea"]
position = Vector2( -10, -3 )
rotation = -0.436332
polygon = PoolVector2Array( -3, -18, 12, -17, 22, -10, 22, 1, 22, 3, 31, 12, 38, 6, 41, 0, 41, -7, 37, -13, 31, -19, 19, -23, 2, -22, -5, -19 )
disabled = true

[node name="AttackTween" type="Tween" parent="."]

[node name="AttackBuffer" type="Timer" parent="."]

[node name="SecondaryAttackBuffer" type="Timer" parent="."]
